--- a/ex02/Makefile
+++ b/ex02/Makefile
@@ -4,7 +4,7 @@ CC = c++
 
 CPPFLAGS = -Wall -Wextra -Werror -std=c++98 
 
-SRC = main.cpp Scaler.cpp
+SRC = main.cpp Base.cpp
 
 OBJ =$(SRC:.cpp=.o)
 
